--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="./style.css" type="text/css" rel="stylesheet">
+  <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     <meta charset="utf-8">
     <title>My Times</title>
   </head>
   <body>
+   <!--Header section-->
      <header>
        <div class="logo">
     <img src="./resources/images/img-myt-logo.jpg"/> <span>My Times</span>
   </div>
-  <nav>
+  <nav class="navigation">
  <span>
     <a href="">World</a>
  </span>
@@ -24,5 +25,7 @@
     <a href="">Science</a>
   </span>
     </nav>
+  </header>
+  <!--Main content-->
   </body>
 </html>
